@@ -647,6 +647,14 @@ type: keyword
 The result of the transaction. HTTP status code for HTTP-related transactions.
 
 
+[float]
+=== `transaction.marks`
+
+type: object
+
+A user-defined mapping of groups of marks. 
+
+
 [[exported-fields-beat]]
 == Beat fields
 
